Fix issue with video player play button being cut off in firefox

--- a/static/video_player.scss
+++ b/static/video_player.scss
@@ -142,8 +142,8 @@
 			}
 
 			.play-video {
-				width: 75px;
-				height: 75px;
+				width: 80px;
+				height: 80px;
 				display: flex;
 				align-items: center;
 				justify-content: center;
